# project-4-django-backend

./: pyproject.toml
backend/: permissions.py  settings.py  urls.py
pictures/: admin.py  models.py  serializers.py  urls.py  views.py
pictures/migrations/: 0001_initial.py  0002_alter_picture_category.py  0003_picture_added_by_alter_picture_picture_url.py  0004_alter_picture_added_by.py  0005_alter_picture_location_alter_picture_name.py
users/: authentication.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
