[tool.poetry]
name = "project-4-backend"
version = "0.1.0"
description = ""
authors = ["Emilie Allen <emilie.allen@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
psycopg2 = "^2.9.3"
djangorestframework = "^3.13.1"
django-cors-headers = "^3.11.0"
jwt = "^1.3.1"
djangorestframework-jwt = "1.11.0"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
